penambahan button back_arrow

--- a/app/src/main/res/layout/activity_uiseller_add_product.xml
+++ b/app/src/main/res/layout/activity_uiseller_add_product.xml
@@ -89,7 +89,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:autofillHints="Add a Product name"
-            android:fontFamily="@font/poppins_medium"
+            android:fontFamily="@font/poppins_semibold"
             android:hint="Add a Product Name"
             android:inputType="textEmailAddress"
             android:textColor="@color/textColorPrimary"
@@ -122,7 +122,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:autofillHints="Add a Description Product"
-            android:fontFamily="@font/poppins_medium"
+            android:fontFamily="@font/poppins_semibold"
             android:hint="Add a Description Product"
             android:inputType="textEmailAddress"
             android:textColor="@color/textColorPrimary"
@@ -153,7 +153,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:autofillHints="Add a Price"
-            android:fontFamily="@font/poppins_medium"
+            android:fontFamily="@font/poppins_semibold"
             android:hint="Add a Price"
             android:inputType="textEmailAddress"
             android:textColor="@color/textColorPrimary"
@@ -184,7 +184,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:autofillHints="Enter the Amount of Leftover Food"
-            android:fontFamily="@font/poppins_medium"
+            android:fontFamily="@font/poppins_semibold"
             android:hint="Enter the Amount of Leftover Food"
             android:inputType="textEmailAddress"
             android:textColor="@color/textColorPrimary"
