--- a/app/src/main/res/layout/activity_uiseller_rab.xml
+++ b/app/src/main/res/layout/activity_uiseller_rab.xml
@@ -36,6 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="39dp"
         android:background="@drawable/selector_button_main"
         android:elevation="3dp"
         android:fontFamily="@font/poppins_semibold"
