--- a/app/src/main/res/layout/activity_uiseller_rab.xml
+++ b/app/src/main/res/layout/activity_uiseller_rab.xml
@@ -34,7 +34,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_regisSeller"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="49dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="39dp"
         android:background="@drawable/selector_button_main"
